// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalloutParagraph renders 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="default"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders an icon 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  margin="1rem"
  roundedCorners={false}
  spacing="default"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <DecorativeIcon />
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with compact 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="compact"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with intermediate 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="intermediate"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;

exports[`CalloutParagraph renders with narrow 1`] = `
<CalloutParagraph__TextWrapper
  compact={false}
  roundedCorners={false}
  spacing="narrow"
>
  <Paragraph
    align="left"
    bold={false}
    invert={false}
    size="medium"
  >
    <span>
      Text
    </span>
  </Paragraph>
</CalloutParagraph__TextWrapper>
`;
